--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -9,15 +9,16 @@ body {
   display: flex;
   height: 100vh;
   justify-content: center;
-  align-items: center;
 }
 
 .container {
+  margin-block-start: 1em;
   background-color: #ff6;
-  padding: 4em;
+  padding: 2em;
   border-radius: 2em;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-  max-width: 640px;
+  min-width: 240px;
+  max-width: 960px;
   display: flex;
   flex-direction: column;
 }
@@ -26,19 +27,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 1em;
 
   h1 {
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: bold;
     margin-block-end: 0;
   }
 
   h2 {
     opacity: 75%;
-    font-size: 1em;
+    font-size: .85em;
     font-style: italic;
     font-weight: 300;
+    max-width: 50ch;
 
     a {
       color: #222;
@@ -50,5 +52,53 @@ body {
     height: 8em;
     object-fit: contain;
     border-radius: 50%;
+  }
+}
+
+%nullPaddingMargin {
+  padding: 0;
+  margin: 0;
+}
+
+.informationContainer {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1em;
+}
+
+.informationSection {
+  background-color: #fc3;
+  padding: .5em;
+  border-radius: 1em;
+  display: flex;
+  flex-direction: column;
+
+  h3 {
+    font-size: 1.45em;
+    align-self: center;
+    margin-block-end: .15em;
+    @extend %nullPaddingMargin;
+  }
+
+  p {
+    margin-inline-start: .5em;
+    align-self: center;
+    font-size: .90em;
+    max-width: 20ch;
+    @extend %nullPaddingMargin;
+  }
+}
+
+.button {
+  padding: .5em;
+  border: none;
+  background-color: #2a3;
+  border-radius: 1.5em;
+  margin-block-start: 1em;
+  cursor: pointer;
+  transition: .15s background-color;
+
+  &:hover {
+    background-color: #2e3;
   }
 }
